# adversarial-thought

./: .gitignore  .gitmodules  .pre-commit-config.yaml  AGENTS.md  README.md  main.py  pyproject.toml
conf/: config.yaml  config_adversarial.yaml  eval_config.yaml  oracle_config.yaml
conf/data/: dolci_sft.yaml
conf/eval/: baseline.yaml  quick.yaml  sft.yaml
conf/model/: gemma3_1b.yaml  qwen3_8b.yaml
conf/oracle/: default.yaml  quick.yaml  quick_dataset.yaml  sft.yaml
conf/training/: adversarial.yaml  default.yaml
core/: __init__.py  data.py  dtype.py  questions.py  steering_hooks.py  verbalizer.py
exp/: __init__.py  adversarial_sft.py  evaluate.py  oracle.py  run_oracle.py  sft_finetune.py
script/: run_adversarial_sft.sh  run_adversarial_sft_alpha_sweep.sh  run_eval.sh  run_eval_adversarial.sh  run_eval_adversarial_quick.sh  run_eval_alpha_sweep.sh  run_eval_baseline.sh  run_eval_baseline_quick.sh  run_eval_sft.sh  run_eval_sft_quick.sh  run_oracle.sh  run_oracle_adversarial.sh  run_oracle_adversarial_quick.sh  run_oracle_alpha_sweep.sh  run_oracle_baseline.sh  run_oracle_baseline_quick.sh  run_oracle_baseline_quick_doc.sh  run_oracle_gemma_quick.sh  run_oracle_quick.sh  run_oracle_quick_8b.sh  run_oracle_quick_8b_dataset.sh  run_oracle_quick_doc.sh  run_oracle_quick_gemma.sh  run_oracle_sft.sh  run_oracle_sft_quick.sh  run_sft.sh  setup_oracle.sh  viz_all_alpha_sweep.sh  viz_all_three.sh  viz_baseline_vs_adversarial.sh  viz_baseline_vs_sft.sh  viz_lmeval_all_alpha_sweep.sh  viz_lmeval_all_three.sh  viz_lmeval_baseline_vs_adversarial.sh  viz_lmeval_baseline_vs_sft.sh  viz_lmeval_sft_vs_adversarial.sh  viz_pareto_alpha_sweep.sh  viz_sft_vs_adversarial.sh
test/: __init__.py  conftest.py  test_core.py  test_data.py  test_evaluate.py  test_exp.py  test_oracle.py  test_questions.py  test_sft_finetune.py  test_viz_lmeval.py
viz/: __init__.py  lmeval.py  oracle.py  plot_lmeval_grouped.py  plot_pareto_alpha_sweep.py  plot_score_dist.py  plot_score_dist_grouped.py
