[project]
name = "adversarial-thought"
version = "0.1.0"
description = "Research on adversarial attacks against activation oracles in LLMs"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.12.0",
    "datasets>=4.5.0",
    "hydra-core>=1.3.2",
    "lm-eval>=0.4.9.2",
    "loguru>=0.7.2",
    "nvitop>=1.6.1",
    "omegaconf>=2.3.0",
    "peft>=0.18.1",
    "pyyaml>=6.0.3",
    "tokenizers>=0.22.2",
    "torch>=2.10.0",
    "tqdm>=4.66.0",
    "transformers[torch]>=4.57.6",
    "wandb>=0.24.0",
]

[dependency-groups]
dev = [
    "hypothesis>=6.100.0",
    "pre-commit>=4.0.0",
    "pytest>=8.0.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.6",
    "ty>=0.0.13",
]

[tool.ruff]
line-length = 88
target-version = "py312"
exclude = ["activation_oracles"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "PTH",    # flake8-use-pathlib
    "RUF",    # Ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
    "B905",   # zip without strict= (Python 3.10+)
]

[tool.ruff.lint.isort]
known-first-party = ["core", "exp"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[[tool.ty.overrides]]
# Ignore nl_probes imports which require activation_oracles env
include = ["exp/oracle.py", "exp/run_oracle.py"]
rules = { unresolved-import = "ignore" }

[tool.pytest.ini_options]
testpaths = ["test"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "-ra",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning",
]

[tool.coverage.run]
source = ["core", "exp"]
omit = ["*/test/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]
