[project]
name = "adversarial-thought"
version = "0.1.0"
description = "Research on adversarial attacks against activation oracles in LLMs"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate",
    "datasets",
    "hydra-core>=1.3.2",
    "lm-eval>=0.4.9.2",
    "loguru>=0.7.2",
    "nl-probes",
    "nvitop>=1.6.1",
    "omegaconf>=2.3.0",
    "openai>=1.0.0",
    "peft",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.3",
    "tokenizers",
    "torch",
    "tqdm>=4.66.0",
    "transformers[torch]==4.55.2",
    "wandb",
    "matplotlib>=3.8.0",
    "cyclopts>=4.5.1",
]

[dependency-groups]
dev = [
    "hypothesis>=6.100.0",
    "pre-commit>=4.0.0",
    "pytest>=8.0.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.6",
    "ty>=0.0.13",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "PTH",    # flake8-use-pathlib
    "RUF",    # Ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
    "B905",   # zip without strict= (Python 3.10+)
]

[tool.ruff.lint.isort]
known-first-party = ["core", "exp"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pytest.ini_options]
testpaths = ["test"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "-ra",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning",
]

[tool.coverage.run]
source = ["core", "exp"]
omit = ["*/test/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]

[tool.uv.extra-build-dependencies]
flash-attn = [{ requirement = "torch", match-runtime = true }]

[tool.uv.sources]
nl-probes = { git = "https://github.com/adamkarvonen/activation_oracles" }
